--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "contribution-parse",
+  "name": "contribution-tree",
   "version": "1.0.0",
   "description": "Git conributions parse",
   "main": "src/main.js",
@@ -8,15 +8,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/async-devil/contribution-parse.git"
+    "url": "git+https://github.com/async-devil/contribution-tree.git"
   },
   "keywords": ["Git", "Parsing"],
   "author": "async-devil",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/async-devil/contribution-parse/issues"
+    "url": "https://github.com/async-devil/contribution-tree/issues"
   },
-  "homepage": "https://github.com/async-devil/contribution-parse#readme",
+  "homepage": "https://github.com/async-devil/contribution-tree#readme",
   "devDependencies": {
     "eslint": "^7.11.0",
     "eslint-config-airbnb-base": "^14.2.0",
