--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "Git conributions parse",
   "main": "src/main.js",
   "scripts": {
-    "run": "nodemon src/main.js"
+    "start": "nodemon src/main.js",
+    "lint": "eslint"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/async-devil/contribution-tree.git"
   },
-  "keywords": ["Git", "Parsing", "Visualization"],
+  "keywords": [
+    "Git",
+    "Parsing",
+    "Visualization"
+  ],
   "author": "async-devil",
   "license": "MIT",
   "bugs": {
@@ -18,10 +23,10 @@
   },
   "homepage": "https://github.com/async-devil/contribution-tree#readme",
   "devDependencies": {
-    "eslint": "^7.11.0",
-    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
     "nodemon": "^2.0.4"
   },
   "dependencies": {
