Configured eslint and prettier

--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
   },
   "homepage": "https://github.com/async-devil/contribution-tree#readme",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.13.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.22.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "prettier": "^2.1.2"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
