--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,10 +1,25 @@
+root: true
+
+env:
+  es6: true
+  browser: true
+  node: true
+
+extends:
+ - "airbnb-base"
+ - "prettier"
+
+plugins:
+  - "babel"
+  - "import"
+  - "prettier"
+
+parser: "babel-eslint"
+
 parserOptions: 
     ecmaVersion: 6
     sourceType: "module"
 
 rules: 
   no-console: "off"
-
-extends: 
-  - "prettier"
-  
+  prettier/prettier: ['error']
