--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.22.1",
     "nodemon": "^2.0.4",
-    "prettier": "^2.1.2"
+    "prettier": "2.1.2"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
