--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "contribution-tree",
   "version": "1.0.0",
   "description": "Git conributions parse",
-  "main": "src/main.js",
+  "main": "src/main.ts",
   "scripts": {
-    "start": "nodemon src/main.js",
+    "start": "nodemon src/main.ts",
     "lint": "eslint"
   },
   "repository": {
@@ -35,6 +35,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "request": "^2.88.2",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
 }
