--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint",
     "start-code": "nodemon src/index.ts",
-    "start-scss": "sass --watch src/public/scss:src/public/css"
+    "start-scss": "sass --watch src/public/scss:src/public/css",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,10 +25,16 @@
   },
   "homepage": "https://github.com/async-devil/contribution-tree#readme",
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
+    "@types/jest": "^26.0.15",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.13.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.4",
     "prettier": "2.1.2",
     "sass": "^1.29.0",
