--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.9",
+    "@types/source-map-support": "^0.5.3",
     "babel-jest": "^26.6.3",
     "eslint": "^7.13.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -36,16 +38,20 @@
     "eslint-plugin-import": "^2.22.1",
     "jest": "^26.6.3",
     "nodemon": "^2.0.4",
+    "onchange": "^7.1.0",
     "prettier": "2.1.2",
     "sass": "^1.29.0",
-    "ts-node": "^9.0.0"
+    "serve": "^11.3.2",
+    "source-map-support": "^0.5.19",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.1.2"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "hbs": "^4.1.1",
-    "request": "^2.88.2",
-    "typescript": "^4.0.5"
+    "request": "^2.88.2"
   },
   "nodemonConfig": {
     "ignore": [
@@ -57,5 +63,12 @@
       "*.json"
     ],
     "ext": "ts,hbs,scss"
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": ["ts", "tsx", "js"]
   }
 }
