--- a/package.json
+++ b/package.json
@@ -39,10 +39,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.3",
     "nodemon": "^2.0.4",
-    "onchange": "^7.1.0",
     "prettier": "2.1.2",
-    "sass": "^1.29.0",
-    "serve": "^11.3.2",
     "source-map-support": "^0.5.19",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
@@ -50,6 +47,7 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "hbs": "^4.1.1",
     "request": "^2.88.2"
