--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Git conributions parse",
   "main": "src/index.ts",
+  "type": "module",
   "scripts": {
     "lint": "eslint",
     "start-code": "nodemon src/index.ts",
@@ -46,7 +47,7 @@
     "source-map-support": "^0.5.19",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.0-dev.20210115"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
